<resources>
    <string name="app_name">AnyShareSDK</string>
    <string name="anyshare_app_name">SHAREit</string>
    <string name="anyshare_dialog_clear_history_title">Sure to clear history?</string>
    <string name="anyshare_dialog_quit_ok">OK</string>
    <string name="anyshare_dialog_quit_cancel">Cancel</string>
    <string name="anyshare_dialog_initial_account_setting">Change an avatar and name yourself!</string>
    <string name="anyshare_dialog_initial_account_save">Save</string>
    <string name="anyshare_content_app_info">No local apk</string>
    <string name="anyshare_content_photo_info">No local photo</string>
    <string name="anyshare_content_music_info">No local music</string>
    <string name="anyshare_content_video_info">No local video</string>
    <string name="anyshare_content_contact_info">No local contact</string>
    <string name="anyshare_content_file_info">No local file</string>
    <string name="anyshare_content_sdcard_unavailable">SD card is not mounted</string>
    <string name="anyshare_share_items_info_count_size">%1$d of %2$s</string>
    <string name="anyshare_share_help_info_1">Tap to select contents</string>
    <string name="anyshare_share_operate_cancel">Cancel</string>
    <string name="anyshare_share_operate_install">Install</string>
    <string name="anyshare_share_operate_installing">Installing</string>
    <string name="anyshare_share_operate_update">Upgrade</string>
    <string name="anyshare_share_operate_run">Run</string>
    <string name="anyshare_share_operate_play">Play</string>
    <string name="anyshare_share_operate_preview">View</string>
    <string name="anyshare_share_operate_set_wallpaper">Apply</string>
    <string name="anyshare_share_operate_open">Open</string>
    <string name="anyshare_share_operate_import">Import</string>
    <string name="anyshare_share_operate_open_failure">This file type is not supported</string>
    <string name="anyshare_share_operate_run_failure">The application can not run</string>
    <string name="anyshare_content_title_photo">Photo</string>
    <string name="anyshare_content_title_app">App</string>
    <string name="anyshare_content_title_file">File</string>
    <string name="anyshare_content_title_music">Music</string>
    <string name="anyshare_content_title_video">Video</string>
    <string name="anyshare_content_title_contact">Contact</string>
    <string name="anyshare_content_pick_button">Next</string>
    <string name="anyshare_camera_album">Camera</string>
    <string name="anyshare_music_artist_unknown">Others</string>
    <string name="anyshare_music_artist_my">Me</string>
    <string name="anyshare_music_album_record">Record</string>
    <string name="anyshare_contact_import_success">Contact imported successfully</string>
    <string name="anyshare_contact_import_failure">Fail to import contact</string>
    <string name="anyshare_util_setting_storage">Storage: <i>%s</i></string>
    <string name="anyshare_util_setting_storage_default">Default SD card</string>
    <string name="anyshare_util_setting_storage_sdcard">External SD card</string>
    <string name="anyshare_pick_content_title">Select content</string>
    <string name="anyshare_receive_wait_title">Waiting to receive</string>
    <string name="anyshare_receive_wait_ready_tips">Wireless hotspots enabled. Now you can share files with your friends with no network traffic.</string>
    <string name="anyshare_receive_wait_init">Initializing…</string>
    <string name="anyshare_receive_wait_info">Waiting to receive</string>
    <string name="anyshare_receive_ap_not_supported">The system version is too low to support \"Receive</string>
    <string name="anyshare_receive_stop_info">Receiving stopped</string>
    <string name="anyshare_receive_nickname">My nickname: %s</string>
    <string name="anyshare_receive_from">From %s</string>
    <string name="anyshare_receive_canceled">Canceled</string>
    <string name="anyshare_receive_cannot_created_file">File generation fails</string>
    <string name="anyshare_receive_not_enough_space">Insufficient storage space</string>
    <string name="anyshare_receive_album_error">The other system version is too low and folder cannot be shared</string>
    <string name="anyshare_receive_info">The sender needs to tap \"Send\"</string>
    <string name="anyshare_receive_notify_ticket1">%s starts installation</string>
    <string name="anyshare_receive_notify_ticket2">%s completes installation</string>
    <string name="anyshare_receive_notify_ticket3">%s installation fails</string>
    <string name="anyshare_receive_notify_content_title1">Installing…</string>
    <string name="anyshare_receive_notify_content_title2">Installed</string>
    <string name="anyshare_receive_notify_content_title3">Fail to install</string>
    <string name="anyshare_receive_sound_effect">Speed up connection by sound</string>
    <string name="anyshare_connect_connecting">Connecting %s</string>
    <string name="anyshare_connect_request">Connection request</string>
    <string name="anyshare_connect_refused">Disconnected</string>
    <string name="anyshare_entity_type">Type:</string>
    <string name="anyshare_entity_type_app">App</string>
    <string name="anyshare_entity_type_music">Music</string>
    <string name="anyshare_entity_type_video">Video</string>
    <string name="anyshare_entity_type_file">File</string>
    <string name="anyshare_entity_type_photo">Photo</string>
    <string name="anyshare_entity_type_wallpaper">Wallpaper</string>
    <string name="anyshare_entity_type_contact">Contact</string>
    <string name="anyshare_entity_type_folder">Folder</string>
    <string name="anyshare_send_title">To %s</string>
    <string name="anyshare_progress_continue_send">Continue</string>
    <string name="anyshare_progress_quit">Finish</string>
    <string name="anyshare_progress_finish_receive_dialog_title">Stop receiving?</string>
    <string name="anyshare_progress_finish_send_dialog_title">Do you want to stop sending?</string>
    <string name="anyshare_progress_failed">Transfer fails</string>
    <string name="anyshare_progress_tip">Preparing transmission data. One second…</string>
    <string name="anyshare_main_user_info_1">%1$s transferred, %2$s in total.</string>
    <string name="anyshare_main_user_info_2">You are an expert of SHAREit!!!</string>
    <string name="anyshare_main_btn_send">Send</string>
    <string name="anyshare_main_btn_receive">Receive</string>
    <string name="anyshare_discover_title">Select receiver</string>
    <string name="anyshare_discover_info">%1$d file(s) selected, %2$s in total</string>
    <string name="anyshare_discover_info1">Searching for nearby phones</string>
    <string name="anyshare_discover_info2">The receiver needs to tap Receive</string>
    <string name="anyshare_discover_connect_by_tone">The connection has been set up by sound: %s</string>
    <string name="anyshare_discover_error">"Failed!
 Make sure the receiver is OK!"</string>
    <string name="anyshare_discover_scan_failed">Can not do scanning in airplane mode.</string>
    <string name="anyshare_discover_timeout_tip">Sorry. No friends found.</string>
    <string name="anyshare_history_no_items">No history</string>
    <string name="anyshare_history_user_info_0">"Dear, you haven't shared any data. Join us and share your joys!"</string>
    <string name="anyshare_history_user_info_1">"Dear, you have tranferred %1$s file(s) with no data traffic, keep it up!
%2$s sent, %3$s received."</string>
    <string name="anyshare_history_user_info_2">"Dear, you have tranferred %1$s file(s) with no data traffic, an expert of SHAREit!
%2$s sent, %3$s received."</string>
    <string name="anyshare_history_loading_tip">Loading…</string>
    <string name="anyshare_history_clear_record">Clear history</string>
    <string name="anyshare_history_del_file">Delete file</string>
    <string name="anyshare_history_review">View</string>
    <string name="anyshare_history_send_prefix">To:</string>
    <string name="anyshare_history_receive_prefix">From:</string>
    <string name="anyshare_history_title_text">History</string>
    <string name="anyshare_history_operation_open">Open</string>
    <string name="anyshare_history_operation_install">Install</string>
    <string name="anyshare_history_operation_run">Run</string>
    <string name="anyshare_history_operation_update">Upgrade</string>
    <string name="anyshare_history_operation_review">Browse</string>
    <string name="anyshare_history_operation_play">Play</string>
    <string name="anyshare_history_operation_import">Import</string>
    <string name="anyshare_history_error_transmit">Unfinished</string>
    <string name="anyshare_history_toast_not_download_completed">Download not completed!</string>
    <string name="anyshare_history_toast_open_failed">Fail to open!</string>
    <string name="anyshare_content_album_select">All</string>
    <string name="anyshare_content_music_tab_all">All songs</string>
    <string name="anyshare_content_music_tab_artist">Artist</string>
    <string name="anyshare_content_music_tab_album">Album</string>
    <string name="anyshare_content_apps_group_game">Games</string>
    <string name="anyshare_content_apps_group_system">Others</string>
    <string name="anyshare_content_apps_group_others">Applications</string>
    <string name="anyshare_activity_share_label">Send to the device nearby</string>
    <string name="anyshare_external_not_supported">Transferring such content type is not supported</string>
    <string name="anyshare_external_text_default_name">Website</string>
    <string name="anyshare_third_contact_error">Contact does not exist</string>
    <string name="anyshare_third_media_error">Media file does not exist</string>
    <string name="anyshare_notification_run_background">SHAREit is running in background</string>
    <string name="anyshare_invite_install_full_version">Download full version of SHAREit and use it</string>
    <string name="sound_enabled_warning">This function needs recording sound, which would not be saved.</string>
    <string name="SUS_MSG_FAIL_NOWLANCONNECTED">Please enable WLAN!</string>
    <string name="SUS_MSG_LATESTVERSION">The version is already the latest!</string>
    <string name="SUS_MSG_NOTFOUND">No available updated version found!</string>
    <string name="SUS_MSG_FAIL_NETWORKUNAVAILABLE">Network unavailable!</string>
    <string name="SUS_MSG_WARNING_PENDING">Updating in process!</string>
    <string name="SUS_MSG_DOWNLOADCOMPLETE">Download complete!</string>
    <string name="SUS_MSG_UPDATE_EXCEPTION">Update fails. Please retry!</string>
    <string name="SUS_SETTINGS_NEVERPROMPT">Do not prompt</string>
    <string name="SUS_SETTINGS_NEWVERPROMPT">Prompt when new version is available</string>
    <string name="SUS_MSG_INSUFFICIENTSTORAGESPACE">Insufficient storage space!</string>
    <string name="SUS_VERSIONUPDATE">New version found!</string>
    <string name="SUS_UPDATEDESC">Updates description:</string>
    <string name="SUS_UPDATEVERPROMPT_VERNAME">Version name:</string>
    <string name="SUS_UPDATEVERPROMPT_VERSIZE">Size:</string>
    <string name="SUS_UPDATESIZEPROMPT_WLAN">Downloading with WLAN is recommended!</string>
    <string name="SUS_UPDATE">Update now</string>
    <string name="SUS_CANCEL">Later</string>
    <string name="SUS_DOWNLOAD_TITLE">SUS downloading</string>
    <string name="SUS_CANCELBUTTON">Cancel</string>
    <string name="SUS_NOTIFICATION_TITLE">Prompt</string>
    <string name="SUS_NOTIFICATION_UPDATINGPROMPT">Updates in process...Please wait!</string>
    <string name="SUS_NOTIFICATION_TIMEOUTPROMPT">Network timed out. Retrying updates...</string>
    <string name="SUS_NOTIFICATION_HIDE_BUTTONTEXT">I know</string>
    <string name="SUS_NOTIFICATION_ABORTUPDATE_BUTTONTEXT">Cancel update</string>
    <string name="SUS_NOTIFICATION_AUTOHIDPROMPTINFO_1">(The window will auto hide itself after</string>
</resources>