<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/recieve" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <FrameLayout android:id="@id/receive_waiting" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:id="@id/receive_top_area" android:paddingLeft="18.0dip" android:paddingTop="36.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_gravity="center|left|top" android:id="@id/receive_self_img" android:layout_width="36.0dip" android:layout_height="36.0dip" />
                <LinearLayout android:orientation="vertical" android:paddingLeft="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="16.0sp" android:textColor="#ffa4a4a4" android:layout_gravity="top" android:id="@id/receive_nick_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:singleLine="true" />
                    <TextView android:textSize="12.0sp" android:textColor="#ffa4a4a4" android:layout_gravity="top" android:id="@id/receive_hotpot_tip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/anyshare_receive_wait_ready_tips" />
                </LinearLayout>
            </LinearLayout>
            <FrameLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ProgressBar android:layout_gravity="center" android:id="@id/photo_progress" android:layout_width="50.0dip" android:layout_height="50.0dip" android:indeterminateDrawable="@drawable/anyshare_progressbar_orange_bg" />
                <ImageView android:id="@id/receive_hotpot_stop" android:background="@drawable/anyshare_progressbar_hotspot_orange" android:visibility="gone" android:layout_width="54.0dip" android:layout_height="46.0dip" />
            </FrameLayout>
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center" android:id="@id/receive_wait_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="10.0dip" android:text="@string/anyshare_receive_wait_init" />
        </FrameLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/receive_progress" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <FrameLayout android:id="@id/progress_content" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <LinearLayout android:layout_gravity="bottom|center" android:orientation="horizontal" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip">
                <ImageView android:layout_gravity="center|left" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginLeft="10.0dip" android:src="@drawable/anyshare_discover_tips_icon" />
                <TextView android:textSize="16.0sp" android:textColor="#ffe86d00" android:gravity="center" android:layout_gravity="center" android:id="@id/receive_storage" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/receive_sound_view" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/anyshare_discover_tips_bg" android:layout_width="260.0dip" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:minHeight="32.0dip">
            <ImageView android:layout_gravity="center|left" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginLeft="10.0dip" android:src="@drawable/anyshare_discover_tips_icon" />
            <TextView android:textSize="16.0sp" android:textColor="#ffe86d00" android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:text="@string/anyshare_receive_info" android:singleLine="false" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="18.0dip">
            <com.lenovo.anyshare.widget.SlipButton android:layout_gravity="center" android:id="@id/receive_sound_button" android:layout_width="76.0dip" android:layout_height="30.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="8.0dip" />
            <TextView android:textSize="15.0sp" android:textColor="#ffa4a4a4" android:gravity="center|left" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/anyshare_receive_sound_effect" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>